[gd_scene load_steps=27 format=3 uid="uid://bwtaxpkgl8h47"]

[ext_resource type="Script" uid="uid://cnaesh0m7hsfk" path="res://main/navigation_node.gd" id="1_hwylr"]
[ext_resource type="Script" uid="uid://dniuhng00r8" path="res://main/select_game.gd" id="2_65qyv"]
[ext_resource type="Theme" uid="uid://csn8r8e58m7eh" path="res://liss_theme.tres" id="3_b5wcq"]
[ext_resource type="FontFile" uid="uid://d3rb01eqt6j05" path="res://fonts/baloo.ttf" id="4_ojolq"]
[ext_resource type="PackedScene" uid="uid://c1k0iiq4gbaro" path="res://ui_components/button_rounded.tscn" id="5_f7234"]
[ext_resource type="Script" uid="uid://774vucfx5d2u" path="res://main/game_icons.gd" id="6_cbno4"]
[ext_resource type="Texture2D" uid="uid://231yjy4jo3ey" path="res://games/flappy_bird/res/sprites/bluebird-midflap.png" id="7_6lfp2"]
[ext_resource type="Texture2D" uid="uid://b574gsllqtfxx" path="res://games/flappy_bird/res/sprites/bluebird-upflap.png" id="8_570k5"]
[ext_resource type="Script" uid="uid://b8a1n7rus6v88" path="res://main/game_icon.gd" id="9_rwisj"]
[ext_resource type="PackedScene" uid="uid://4up37qy0dwai" path="res://games/sluss_hero/SlussHero.tscn" id="10_14887"]
[ext_resource type="PackedScene" uid="uid://c1br1daxc4edk" path="res://games/flappy_bird/FlappyBird.tscn" id="10_fynad"]
[ext_resource type="Texture2D" uid="uid://ukkaqi27h0ep" path="res://games/sluss_hero/res/sprites/logo.png" id="11_hwylr"]
[ext_resource type="Texture2D" uid="uid://cximsi48607ly" path="res://graphics/arrow_back.png" id="13_llygw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ulsrt"]
animations = [{
"frames": [{
"duration": 1.8,
"texture": ExtResource("7_6lfp2")
}, {
"duration": 1.8,
"texture": ExtResource("8_570k5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_14887"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_hwylr")
}],
"loop": true,
"name": &"static",
"speed": 5.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bdlug"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8ggak"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nitrr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3wed8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s3u5s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e26ww"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kxfws"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7w4t1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6kiig"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kr7tf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_diea8"]

[node name="SelectGame" type="Node2D"]
script = ExtResource("1_hwylr")
metadata/_custom_type_script = "uid://cnaesh0m7hsfk"

[node name="SelectGame" type="Node2D" parent="."]
script = ExtResource("2_65qyv")

[node name="LblTitle" type="Label" parent="SelectGame"]
offset_top = 32.0
offset_right = 480.0
offset_bottom = 166.0
theme = ExtResource("3_b5wcq")
theme_override_font_sizes/font_size = 87
text = "Välj spel"
horizontal_alignment = 1

[node name="LblGameTitle" type="Label" parent="SelectGame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 430.0
offset_right = 480.0
offset_bottom = 507.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_b5wcq")
theme_override_fonts/font = ExtResource("4_ojolq")
theme_override_font_sizes/font_size = 48
text = "Flappy Bird"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonRounded" parent="SelectGame" instance=ExtResource("5_f7234")]
offset_left = 140.0
offset_top = 553.0
offset_right = 340.0
offset_bottom = 653.0
text = "Spela"

[node name="LblSelectionHint" type="Label" parent="SelectGame"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 696.0
offset_right = 480.0
offset_bottom = 773.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_b5wcq")
theme_override_constants/line_spacing = -8
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("4_ojolq")
theme_override_font_sizes/font_size = 24
text = "Välj spel med knapparna
på sidan av maskinen
Fler spel kommer!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameIcons" type="Node2D" parent="SelectGame"]
script = ExtResource("6_cbno4")

[node name="IconFlappyBird" type="AnimatedSprite2D" parent="SelectGame/GameIcons"]
texture_filter = 1
position = Vector2(61, 308)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ulsrt")
animation = &"idle"
script = ExtResource("9_rwisj")
title = "Flappy Bird"
scene = ExtResource("10_fynad")

[node name="IconDinoGame" type="AnimatedSprite2D" parent="SelectGame/GameIcons"]
texture_filter = 1
position = Vector2(240, 309)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ulsrt")
animation = &"idle"
script = ExtResource("9_rwisj")
title = "Flappy Bird"
scene = ExtResource("10_fynad")

[node name="IconFlappyBird2" type="AnimatedSprite2D" parent="SelectGame/GameIcons"]
texture_filter = 1
position = Vector2(422, 308)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ulsrt")
animation = &"idle"
script = ExtResource("9_rwisj")
title = "Flappy Bird"
scene = ExtResource("10_fynad")

[node name="IconDinoGame2" type="AnimatedSprite2D" parent="SelectGame/GameIcons"]
texture_filter = 1
position = Vector2(601, 309)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_ulsrt")
animation = &"idle"
script = ExtResource("9_rwisj")
title = "Flappy Bird"
scene = ExtResource("10_fynad")

[node name="IconSlussHero" type="AnimatedSprite2D" parent="SelectGame/GameIcons"]
texture_filter = 1
position = Vector2(61, 308)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_14887")
animation = &"static"
script = ExtResource("9_rwisj")
title = "Sluss Hero"
scene = ExtResource("10_14887")

[node name="MarkerLeftOos" type="Marker2D" parent="SelectGame/GameIcons"]
position = Vector2(-120, 449)

[node name="MarkerLeft" type="Marker2D" parent="SelectGame/GameIcons"]
position = Vector2(60, 359)

[node name="MarkerCenter" type="Marker2D" parent="SelectGame/GameIcons"]
position = Vector2(240, 309)

[node name="MarkerRight" type="Marker2D" parent="SelectGame/GameIcons"]
position = Vector2(420, 359)

[node name="MarkerRightOos" type="Marker2D" parent="SelectGame/GameIcons"]
position = Vector2(600, 450)

[node name="BtnCancel" type="Button" parent="SelectGame"]
offset_left = 29.0
offset_top = 53.0
offset_right = 85.0
offset_bottom = 109.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_bdlug")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_8ggak")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_nitrr")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_3wed8")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_s3u5s")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_e26ww")
theme_override_styles/hover = SubResource("StyleBoxEmpty_kxfws")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_7w4t1")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_6kiig")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_kr7tf")
theme_override_styles/normal = SubResource("StyleBoxEmpty_diea8")
icon = ExtResource("13_llygw")

[connection signal="button_down" from="SelectGame/ButtonRounded" to="SelectGame/GameIcons" method="_on_play_button_down"]
[connection signal="title_change" from="SelectGame/GameIcons" to="SelectGame" method="_on_game_icon_title_change"]
[connection signal="button_down" from="SelectGame/BtnCancel" to="." method="_on_back"]
